<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="pause">pause</string>
    <string name="channel_name">Sound Player</string>
    <string name="play_pause">play/pause</string>
    <string name="stop">Stop</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="_10">+10</string>
    <string name="minus_10">-10</string>
</resources>